# Variant

./: CMakeLists.txt  README.md  Variant.cpp  Variant.hpp  Variant.inl  VariantRegisterType.hpp  VariantTest.hpp  VariantTypeImplementation.cpp  VariantTypeImplementation.hpp  main.cpp
ZigZag/: Variant.cpp  Variant.hpp  VariantRegisterType.hpp  VariantTypeImplementation.cpp  VariantTypeImplementation.hpp
test/: CMakeLists.txt  DebugClass.hpp  VariantTest.hpp  main.cpp
